test/official_tests/class/inherit_self.lox
class Foo < Foo {} // error: {"line":1,"message":"A class can't inherit from itself","type":"RuntimeError"}
